cluster/apps/rimworld-together/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rimworld-together
    app.kubernetes.io/version: sha256-a978f0f139ea2
  name: rimworld-together
spec:
  selector:
    app.kubernetes.io/name: rimworld-together
  ports:
  - name: http-rimworld-together
    port: 25555
    targetPort: 25555
